Make header width 110% to fix header right margin on iphone

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
   background: -webkit-linear-gradient(to right, #FF0000, #CC0000);
   background: linear-gradient(to right, #FF0000, #CC0000);
   height: 255px;
-  width: 100%;
+  width: 101%;
   position: relative;
   display: flex;
   justify-content: space-around;
